Fin de cours, commencement nouveau cours

--- a/tp/tp_note/web/tp.html
+++ b/tp/tp_note/web/tp.html
@@ -47,6 +47,9 @@
     </button>
     <center>
         <div class="grille" id="grille-container"></div>
+        <p id="paraf-fin"style="display: none;">
+            Le robot à fini de nétoyer la zone !
+        </p>
     </center>
 </body>
 </html>
